2006-03-16  Tim-Philipp Müller  <tim at centricular dot net>

	* gst/id3demux/id3v2frames.c:
	(parse_relative_volume_adjustment_two):
	  We only care about gain and peak data for the master volume.

2006-03-16  Tim-Philipp Müller  <tim at centricular dot net>

	* gst/id3demux/id3v2frames.c: (id3demux_id3v2_parse_frame),
	(parse_id_string), (parse_unique_file_identifier),
	(parse_relative_volume_adjustment_two), (id3v2_tag_to_taglist):
	  Read replay gain tags (#323721).

2006-03-15  Tim-Philipp Müller  <tim at centricular dot net>

	* configure.ac:
	  Bump requirements to gst-plugins-base CVS because
	  of buggy gst_tag_from_id3_user_tag() in 0.10.5.

2006-03-15  Philippe Kalaf  <philippe.kalaf at collabora.co.uk>

	* rtp/gst/gstrtppcmadepay.c:
	Fixed one of the caps in the code from mulaw to alaw.

2006-03-15  Jan Schmidt  <thaytan@mad.scientist.com>

	* gst/apetag/gsttagdemux.c: (gst_tag_demux_chain):
	  Ensure that we set caps on the buffers we pass.

	* gst/id3demux/gstid3demux.c: (gst_id3demux_chain),
	(gst_id3demux_sink_activate):
	  Ensure that we set caps on the buffers we pass.

	  Use STREAM, TYPE_NOT_FOUND as the error class when
	  typefinding fails.

2006-03-15  Edward Hervey  <edward@fluendo.com>

	* ext/cairo/gsttextoverlay.c: (gst_text_overlay_init):
	* ext/dv/gstdvdemux.c: (gst_dvdemux_init), (gst_dvdemux_add_pads):
	* ext/gdk_pixbuf/gstgdkpixbuf.c: (gst_gdk_pixbuf_init):
	* ext/jpeg/gstjpegdec.c: (gst_jpeg_dec_init),
	(gst_jpeg_dec_setcaps):
	* ext/jpeg/gstjpegenc.c: (gst_jpegenc_init):
	* ext/jpeg/gstsmokedec.c: (gst_smokedec_init):
	* ext/jpeg/gstsmokeenc.c: (gst_smokeenc_init):
	* ext/libmng/gstmngdec.c: (gst_mngdec_init),
	(gst_mngdec_src_getcaps):
	* ext/libpng/gstpngdec.c: (gst_pngdec_init),
	(gst_pngdec_caps_create_and_set):
	* ext/libpng/gstpngenc.c: (gst_pngenc_init):
	* ext/mikmod/gstmikmod.c: (gst_mikmod_init):
	* ext/speex/gstspeexdec.c: (gst_speex_dec_init):
	* gst/alpha/gstalpha.c: (gst_alpha_init):